--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,9 @@ jobs:
 
     - name: Install pytest
       run: pip3 install pytest
+
+    - name: Install pytest-asyncio
+      run: pip3 install pytest-asyncio
+
     - name: Testing
       run: pytest
